# lichesspy

./: .gitignore  .gitmodules  .pylintrc  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: codeql-analysis.yml  deploy_python.yml
lichesspy/: __init__.py  api.py  auth.py  format.py  pgn.py
