[tool.poetry]
name = "lichesspy"
version = "6.0.2"
description = "Python wrapper for lichess"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
homepage = "https://github.com/eskopp/lichesspy"
authors = ["eskopp <skopp.erik@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "*"
chess = "==1.10.0"
python-chess = "==1.999"
requests = "==2.31.0"
six = "==1.16.0"
